--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@deck.gl/core": "7.0.5",
+    "@deck.gl/layers": "7.0.5",
+    "@deck.gl/mesh-layers": "7.0.5",
+    "@deck.gl/geo-layers": "7.0.5",
+    "@deck.gl/react": "7.0.5",
+    "@loaders.gl/core": "1.0.3",
+    "@luma.gl/addons": "7.0.1",
+    "@luma.gl/core": "7.0.1",
+    "@nebula.gl/layers": "0.12.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-map-gl": "5.1.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
@@ -27,5 +37,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
