--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "16.8.6",
     "react-map-gl": "5.1.1",
     "react-scripts": "3.2.0",
-    "react-addons-update": "15.6.2"
+    "react-addons-update": "15.6.2",
+    "bootstrap": "4.3.1",
+    "react-bootstrap": "1.0.0-beta.14"
   },
   "scripts": {
     "start": "react-scripts start",
