--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "3.2.0",
     "react-addons-update": "15.6.2",
     "bootstrap": "4.3.1",
-    "react-bootstrap": "1.0.0-beta.14"
+    "react-bootstrap": "1.0.0-beta.14",
+    "react-bootstrap-typeahead": "3.4.7",
+    "axios": "0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
