--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "dependencies": {
     "@deck.gl/core": "7.0.11",
+    "@deck.gl/geo-layers": "7.0.11",
     "@deck.gl/layers": "7.0.11",
     "@deck.gl/mesh-layers": "7.0.11",
-    "@deck.gl/geo-layers": "7.0.11",
     "@deck.gl/react": "7.0.11",
     "@loaders.gl/core": "1.0.3",
     "@luma.gl/addons": "7.0.1",
     "@luma.gl/core": "7.0.1",
     "@nebula.gl/layers": "0.12.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-map-gl": "5.1.1",
-    "react-scripts": "3.2.0",
-    "react-addons-update": "15.6.2",
+    "axios": "0.19.0",
     "bootstrap": "4.3.1",
+    "gh-pages": "^2.1.1",
+    "react": "16.8.6",
+    "react-addons-update": "15.6.2",
     "react-bootstrap": "1.0.0-beta.14",
     "react-bootstrap-typeahead": "3.4.7",
-    "axios": "0.19.0"
+    "react-dom": "16.8.6",
+    "react-map-gl": "5.1.1",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
